# rtd-poetry

./: LICENSE.txt  README.md  azure-pipelines.yml  pyproject.toml  rtd_poetry.py
tests/: __init__.py  conftest.py  test_rtd_poetry.py
